add event lists from 2012-2020

--- a/events/index.html
+++ b/events/index.html
@@ -315,6 +315,107 @@ Mozilla Reps - Events
       <!-- Table start -->
       <table id="events-table">
         <tbody id="events-table-body">
+
+          <tr class="event-item" data-lat="" data-lon="" data-name="2012">
+            <td>
+              <div class="row">
+                <!-- Event Date -->
+                <div class="large-1 columns events-table-date-container">
+                  <div class="events-table-date panel">
+                    <div class="events-table-date-year">
+                      <a href="../events/events_2012.html">
+                        2012
+                      </a>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="large-1 columns events-table-date-container">
+                  <div class="events-table-date panel">
+                    <div class="events-table-date-year">
+                      <a href="../events/events_2013.html">
+                        2013
+                      </a>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="large-1 columns events-table-date-container">
+                  <div class="events-table-date panel">
+                    <div class="events-table-date-year">
+                      <a href="../events/events_2014.html">
+                        2014
+                      </a>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="large-1 columns events-table-date-container">
+                  <div class="events-table-date panel">
+                    <div class="events-table-date-year">
+                      <a href="../events/events_2015.html">
+                        2015
+                      </a>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="large-1 columns events-table-date-container">
+                  <div class="events-table-date panel">
+                    <div class="events-table-date-year">
+                      <a href="../events/events_2016.html">
+                        2016
+                      </a>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="large-1 columns events-table-date-container">
+                  <div class="events-table-date panel">
+                    <div class="events-table-date-year">
+                      <a href="../events/events_2017.html">
+                        2017
+                      </a>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="large-1 columns events-table-date-container">
+                  <div class="events-table-date panel">
+                    <div class="events-table-date-year">
+                      <a href="../events/events_2018.html">
+                        2018
+                      </a>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="large-1 columns events-table-date-container">
+                  <div class="events-table-date panel">
+                    <div class="events-table-date-year">
+                      <a href="../events/events_2019.html">
+                        2019
+                      </a>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="large-1 columns events-table-date-container">
+                  <div class="events-table-date panel">
+                    <div class="events-table-date-year">
+                      <a href="../events/events_2020.html">
+                        2020
+                      </a>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="large-1 columns events-table-date-container">
+                </div>
+
+              </div>
+            </td>
+          </tr>
         </tbody>
       </table>
     </div>
